# wctf

./: .coverage  .gitignore  CLAUDE.md  DEVELOPMENT.md  README.md  README.tmp  WCTF_FRAMEWORK.md  analyze_stage_one_promising.py  claude_desktop_config.example.json  flake.nix  pyproject.toml
.beads/: beads.base.jsonl  beads.base.meta.json  beads.left.jsonl  beads.left.meta.json  deletions.jsonl  issues.jsonl
.beads-bridge/: config.json
.claude/: settings.local.json
.devcontainer/: devcontainer.json
batches/: batch-1.json  batch-2.json  batch-3-report.md  batch-3-summary.json  batch-3.json  batch-4-completion-report.md  batch-4-summary.json  batch-4.json  stage-1-batch-plan.md
data/: dashboard.html  profile.yaml
docs/: SDK_REFERENCE.md  calibration-learnings-mechanical-orchard.md  flag-extraction-workflow-tuned.md  generate_docs.py
examples/: analyze_companies.py  get_company_info.py  list_companies.py  map_organization.py  research_company.py  search_roles.py  search_roles_example.py
prompts/: README.md  flag-extraction-context.md  flag-extraction-green-flags.md  flag-extraction-red-flags.md  market-position-deep-dive.md  master-research-prompt.md  mountain-expedition-flag-extraction.md  startup-viability-prompt.md
scripts/: README.md  analyze_stage_one_promising.py  check_duplicates.py  extract_intel_flags.py  generate_dashboard.py  generate_evaluation_overview.py  generate_evaluation_rubric.py  generate_interview_guide.py  get_flags_prompt.py  map_org.py  merge_duplicates.py  migrate_staff_engineer_alignment.py  migrate_to_stages.py  save_flags.py  (+2 more)
(+333 files in other folders)
