[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wctf-core"
version = "0.2.0"
description = "Core SDK and MCP server for Worth Climbing The Foothill company research data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rapidfuzz>=3.14.1",
    "anthropic>=0.72.1",
]

[project.scripts]
wctf-server = "wctf_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
]

[tool.coverage.run]
source = ["wctf_core"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
